client2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: client2
   labels:
      ns: client2
