client2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client2-svc
spec:
  selector:
     app: client2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
